# python

./: pyproject.toml
lichess/: __init__.py
lichess/client/: __init__.py  formats.py  session.py
lichess/lib/ndjson/: __init__.py  api.py
lichess/lib/utils/: __init__.py
lichess/models/: ArenaPerf.py  ArenaPosition.py  ArenaRatingObj.py  ArenaSheet.py  ArenaStatus.py  ArenaStatusName.py  ArenaTournament.py  ArenaTournamentFull.py  ArenaTournamentPlayed.py  ArenaTournamentPlayer.py  ArenaTournaments.py  BroadcastByUser.py  BroadcastCustomPoints.py  BroadcastCustomPointsPerColor.py  BroadcastCustomScoring.py  BroadcastForm.py  BroadcastGameEntry.py  BroadcastGroup.py  BroadcastGroupTour.py  BroadcastMyRound.py  BroadcastPlayerWithFed.py  BroadcastRoundInfo.py  BroadcastRoundStudyInfo.py  BroadcastTiebreakExtendedCode.py  BroadcastTop.py  BroadcastTour.py  BroadcastWithLastRound.py  BulkPairing.py  ChallengeCanceledEvent.py  ChallengeDeclinedEvent.py  ChallengeDeclinedJson.py  ChallengeEvent.py  ChallengeJson.py  ChallengeOpenJson.py  ChallengeStatus.py  ChallengeUser.py  ChatLineEvent.py  Clock.py  CloudEval.py  Count.py  (+72 more)
tests/: test_imports.py
