[project]
name = "lichess-api"
version = "0.5.0"
description = "A simple Python wrapper for Lichess API"
authors = [{ name = "gameroman", email = "dev@rman.dev" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
keywords = ["lichess", "chess", "berserk", "bot", "api", "tools"]
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
	"License :: OSI Approved :: MIT License",
]
dependencies = ["pydantic>=2.12.5", "requests>=2.33.0"]

[project.urls]
Source = "https://github.com/lichess-api/python"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.taskipy.tasks]
clean = "python -c \"import shutil; shutil.rmtree('dist', ignore_errors=True)\""
build = "task clean && uv build"
publish = "uv publish"
release = "uv build && uv publish"
format = "uv run ruff format ."
test = "uv run pytest"

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.15.8"]
